<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicalConsultationActivity">

    <ImageView
        android:id="@+id/oucrc_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oucrc" />

    <ImageView
        android:layout_marginTop="16dp"
        android:id="@+id/save_the_world_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oucrc_logo"
        app:srcCompat="@drawable/save_the_world" />

    <TextView
        android:id="@+id/medical_consultation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:letterSpacing="0.1"
        android:text="@string/medical_consultation_label"
        android:textColor="@color/colorBlack"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_the_world_img" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medical_consultation_label">

        <CheckBox
            android:id="@+id/medical_consultation_checkbox_1"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:button="@drawable/checkbox_state"
            android:letterSpacing="0.15"
            android:paddingStart="15dp"
            android:text="@string/medical_consultation_checkbox_1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp" />

        <CheckBox
            android:id="@+id/medical_consultation_checkbox_2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:button="@drawable/checkbox_state"
            android:letterSpacing="0.15"
            android:paddingStart="15dp"
            android:text="@string/medical_consultation_checkbox_2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp" />

        <CheckBox
            android:id="@+id/medical_consultation_checkbox_3"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:button="@drawable/checkbox_state"
            android:letterSpacing="0.15"
            android:paddingStart="15dp"
            android:text="@string/medical_consultation_checkbox_3"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="350dp" />

    </LinearLayout>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_state"
        android:enabled="false"
        android:letterSpacing="0.5"
        android:text="@string/done_button"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>